Refactor stylesheets and make minor optimizations
I took advantage of some SASS features to split up the stylesheet. It
should be easier to maintain now. I also created a config file so
I can tell the generator to output minified CSS.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Rajvir Samrai
     <div class="links">
       <ul>
         <li><a href="https://github.com/rajvirsamrai/mosaic">Source Code via GitHub</a></li>
-        <li><a href="https://cragl.cs.gmu.edu/pixelate/journal.html">The journal publication is availble here</a></li>
+        <li><a href="https://cragl.cs.gmu.edu/pixelate/journal.html">The above journal publication is availble here</a></li>
       </ul>
     </div>
   </div>
