Update business card and add content to pages
I removed the contact page and moved contact info into the business
card area. I also added a picture to the business card. I am still
using the buzz on the moon placeholder. I also added some content
and styling to the about page. I replaced the contact page with a
games page.

--- a/about.html
+++ b/about.html
@@ -2,4 +2,8 @@
 layout: default
 title: About
 ---
-Yo
+<div class="bio">
+    <h2>A little bit about me.</h2>
+    <p>I'm a young Canadian lad whose studying computer science at the University of Toronto-Mississauga. I like making games, lists, and useful tools.</p>
+    <p>abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefgh</p>
+</div>
