Create a lists collection and page
I added a lists collection and 2 list documents. I want to be able to
share the lists I create. I also want to prepare for a blog page.

--- a/lists.html
+++ b/lists.html
@@ -1,5 +1,10 @@
 ---
-layout: default
 title: Lists
 ---
-I like Prey, Return of the Obra Dinn, and Enviromental Station Alpha
+<div id="lists">
+    <ul>
+        {% for list in site.lists %}
+            <h2><a href="{{ list.url }}">{{ list.title }}</a></h2>
+        {% endfor %}
+    </ul>
+</div>
