Add a 404 page and optimize arrow.png
I created a custom 404 page. I also optimized arrow.png by scaling it
manually and also compressing it. This is just for a minor performance
boost as github pages has a 10 minute far future expiration header.
I also made some content changes to the projects page, specifically to
Blind Tiger.

--- a/projects.html
+++ b/projects.html
@@ -11,16 +11,18 @@ title: Projects
   </div>
   <div class="description">
     <div class="statement">
-      <h3>An Amateur Password Manager</h3>
-      <p>I made a password manager for a few reasons. One, I wanted to manage my passwords. Two, I wanted to learn more about cryptography and software design patterns. And three, I needed a portfolio piece to show my skills.</p>
+      <h3>An Amateur Text Encryption Tool</h3>
+      <p>Use Blind Tiger to encrypt and compress plain text quickly. You can choose from the available compression and encryption methods as wells as the order in which they're done.</p>
+      <p>This project started because I wanted to learn about compression, cryptography, and software design patterns. I also wanted to confirm to myself I could program in Java.</p>
     </div>
     <div class="comment">
       <img src="assets/images/arrow.png">
-      <p>I do not recommend using Blind Tiger as I'm not a cyber security professional, however, if you want to use it I can't stop you.</p>
+      <p>You can also interact with Blind Tiger through the shell.</p>
     </div>
     <div class="links">
       <ul>
         <li><a href="https://github.com/rajvirsamrai/">Source Code via GitHub</a></li>
+        <li><a href="https://openjfx.io/">Made with JavaFX</a></li>
       </ul>
     </div>
   </div>
@@ -42,7 +44,7 @@ title: Projects
     </div>
     <div class="comment">
       <img src="assets/images/arrow.png">
-      <p>This website was last updated August 18th 2020</p>
+      <p>This website was last updated August 30th 2020</p>
     </div>
     <div class="links">
       <ul>
