Fix grammar on the about page and update games page

--- a/about.html
+++ b/about.html
@@ -4,6 +4,5 @@ title: About
 ---
 <div class="bio">
     <h2>A little bit about me.</h2>
-    <p>I'm a young Canadian lad whose studying computer science at the University of Toronto-Mississauga. I like making games, lists, and useful tools.</p>
-    <p>abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefgh</p>
+    <p>I'm a Canadian lad who's studying computer science at the University of Toronto-Mississauga. I like making games, lists, and useful tools.</p>
 </div>
