--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@ title: Games
     </div>
     <div class="description">
         <div class="statement">
-            <h3>pygame 2</h3>
-            <p>A game made with the boys</p>
+            <h3>A story about...</h3>
+            <p>A game made for ENG279</p>
         </div>
         <div class="comment">
             <img src="assets/images/arrow.png">
-            <p>I do not recommend playing this game.</p>
+            <p>I'm no Shakespeare.</p>
         </div>
         <div class="links">
             <ul>
                 <li><a href="https://github.com/rajvirsamrai/">Source Code via GitHub</a></li>
+                <li><a href="https://twinery.org/">Made with Twine</a></li>
             </ul>
         </div>
     </div>
