Implement blogging and update css to match

--- a/lists.html
+++ b/lists.html
@@ -1,7 +1,7 @@
 ---
 title: Lists
 ---
-<div id="lists">
+<div id="pieces">
     <ul>
         {% for list in site.lists %}
             <h2><a href="{{ list.url }}">{{ list.title }}</a></h2>
