--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
 ---
 title: Blog
 ---
-<div id="lists">
+<div id="pieces">
     <ul>
-        {% for list in site.lists %}
-            <h2><a href="{{ list.url }}">{{ list.title }}</a></h2>
+        {% for post in site.posts %}
+            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
         {% endfor %}
     </ul>
 </div>
