Switch from png to webp

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Games
             <p>A game made for ENG279</p>
         </div>
         <div class="comment">
-            <img src="assets/images/arrow.png">
+            <img src="assets/images/arrow.webp">
             <p>I'm no Shakespeare.</p>
         </div>
         <div class="links">
@@ -25,6 +25,6 @@ title: Games
         </div>
     </div>
     <div class="media">
-        <img src="assets/images/temporary_pix_not_mosaic_buzz_on_the_moon.png">
+        <img src="assets/images/temporary_pix_not_mosaic_buzz_on_the_moon.webp">
     </div>
 </div>
