--- a/about.html
+++ b/about.html
@@ -4,5 +4,5 @@ title: About
 ---
 <div class="bio">
     <h2>A little bit about me.</h2>
-    <p>I'm a Canadian lad who's studying computer science at the University of Toronto-Mississauga. I like making games, lists, and useful tools.</p>
+    <p>I'm a Canadian lad who's studying computer science at the University of Toronto Mississauga. I like making games, lists, and useful tools.</p>
 </div>
