Create a css class for the arrow and update the games page

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@ title: Projects
       <p>This project started because I wanted to learn about compression, cryptography, and software design patterns. I also wanted to confirm to myself I could program in Java.</p>
     </div>
     <div class="comment">
-      <img src="assets/images/arrow.webp">
+      <img class="arrow" src="assets/images/arrow.webp">
       <p>You can also interact with Blind Tiger through the shell.</p>
     </div>
     <div class="links">
@@ -43,7 +43,7 @@ title: Projects
       <p>I had a website prior to this but I learned that it was quite terrible. I've remade this website from scratch taking inspiration from dukope.com</p>
     </div>
     <div class="comment">
-      <img src="assets/images/arrow.webp">
+      <img class="arrow" src="assets/images/arrow.webp">
       <p>This website was last updated August 30th 2020</p>
     </div>
     <div class="links">
