--- a/404.html
+++ b/404.html
@@ -3,5 +3,5 @@ title: 404
 ---
 <div id="four">
     <h1>Seems like what you're looking for isn't here.</h1>
-    <h1>Maybe it was deleted or didn't even exist in the first place?</h1>
+    <h1>Maybe it was deleted or it didn't exist in the first place?</h1>
 </div>
