Update styling for various links and list formatting

--- a/lists.html
+++ b/lists.html
@@ -3,8 +3,8 @@ title: Lists
 ---
 <div id="pieces">
     <ul>
-        <h2><a href="https://letterboxd.com/rajvirsamrai/">Letterboxd profile</a></h2>
-        <h2><a href="https://myanimelist.net/profile/rajvirsamrai/">MyAnimeList profile</a></h2>
+        <h2><a href="https://letterboxd.com/rajvirsamrai/">Letterboxd</a></h2>
+        <h2><a href="https://myanimelist.net/profile/rajvirsamrai/">MyAnimeList</a></h2>
         {% for list in site.lists %}
             <h2><a href="{{ list.url }}">{{ list.title }}</a></h2>
         {% endfor %}
