--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@ title: Projects
     </div>
     <div class="links">
       <ul>
-        <li><a href="https://github.com/rajvirsamrai/">Source Code via GitHub</a></li>
+        <li><a href="https://github.com/rajvirsamrai/jorse">Source Code via GitHub</a></li>
         <li><a href="https://openjfx.io/">Made with JavaFX</a></li>
       </ul>
     </div>
