--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Games
         <div class="links">
             <ul>
                 <li><a href="https://github.com/rajvirsamrai/">Source Code via GitHub</a></li>
-		<li><a href="https://www.libsdl.org/">Made with SDL</a></li>
+		<li><a href="https://www.libsdl.org/">Made with SDL2</a></li>
             </ul>
         </div>
     </div>
