Add an underline to nav items when you hover and minor vocba

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@ title: Projects
   <div class="description">
     <div class="statement">
       <h3>An Image Abstraction Tool to Make Pixel Art</h3>
-      <p>I started this project because I wasn't a great artist—yet. I made it with the intention of converting photos to pixel art, however, input isn't limited to photography as long as the image format is supported.</p>
+      <p>I started this project because I'm not a great artist—yet. I made it with the intention of converting photos to pixel art, however, input isn't limited to photography as long as the image format is supported.</p>
       <p>This project is based on the algorithm and ideas presented in "Computers & Graphics, ISSN: 0097-8493, Vol: 37, Issue: 5, Page: 333-347"</p>
     </div>
     <div class="comment">
