Update styling and a minor structural detail for the footer

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@ title: Projects
   <div class="description">
     <div class="statement">
       <h3>A Web Portfolio</h3>
-      <p>I had a website prior to this but I learned that it was quite terrible. I've remade this website from scratch taking inspiration from dukope.com</p>
+      <p>I had a website prior to this but I learned that it was quite terrible. I've remade this website from scratch and stole a few (maybe a bit more than a few) ideas from dukope.com</p>
     </div>
     <div class="comment">
       <img class="arrow" src="assets/images/arrow.webp">
