--- a/projects.html
+++ b/projects.html
@@ -43,11 +43,11 @@ title: Projects
   <div class="description">
     <div class="statement">
       <h3>A Web Portfolio</h3>
-      <p>I had a website prior to this but I learned that it was quite terrible. I've remade this website from scratch and stole a few (maybe a bit more than a few) ideas from dukope.com</p>
+      <p>I had a website prior to this but I learned that it wasn't great. I remade this website while taking many ideas from dukope.com</p>
     </div>
     <div class="comment">
       <img class="arrow" src="assets/images/arrow.webp">
-      <p>This website was last updated October 18th 2020</p>
+      <p>This website was last updated November 18th 2020</p>
     </div>
     <div class="links">
       <ul>
