--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@ title: Projects
     </div>
     <div class="comment">
       <img class="arrow" src="assets/images/arrow.webp">
-      <p>This website was last updated November 18th 2020</p>
+      This website was last updated November 18th 2020
     </div>
     <div class="links">
       <ul>
