Removed projects page and updated header

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 title: 404
 ---
-<div id="four">
-    What you're looking for doesn't exist.
+<div id="fourohfour">
+    Agent 404, what you're looking for doesn't exist.
 </div>
